Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-deployment
  labels:
    app: netflix
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflix
  template:
    metadata:
      labels:
        app: netflix
    spec:
      containers:
      - name: netflix
        image: 898855110204.dkr.ecr.us-east-1.amazonaws.com/netflix-clone:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
