Kubernetes/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: netflix-svc
  labels:
    app: netflix
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: netflix
